<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toll_static_text"
        android:layout_width="405dp"
        android:layout_height="43dp"
        android:background="@color/purple_500"
        android:text="@string/toll_fee_collector"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_of_vehicle_static_text"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/no_of_vehicles"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/amt_collected_static_text"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="88dp"
        android:text="@string/amt_collected"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vehicle_count"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amt_count"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two_wheeler_button"
        android:layout_width="107dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="328dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/_2_nwheeler"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four_wheeler_button"
        android:layout_width="107dp"
        android:layout_height="69dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="328dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/_4_nwheeler"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rfid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/purple_500"
        android:text="@string/rfid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/truck_button"
        android:layout_width="107dp"
        android:layout_height="69dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/truck_n_bus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vip_button"
        android:layout_width="107dp"
        android:layout_height="69dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/vip_n_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>